--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -1,19 +1,19 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block content %}
 
+{% block content %}
 
 
 <section class="section-content padding-y bg">
 <div class="container">
 
 <!-- ============================ COMPONENT 1 ================================= -->
-{% if not  cart_items %}
-<h2 class="text-center">Your shopping cart is empty</h2>
-<div class="text-center">
-	<a href="{% url 'home' %}" class="btn btn-primary">Continue Shopping</a>
-
-</div>
+{% if not cart_items %}
+	<h2 class="text-center">Your Shopping Cart is Empty</h2>
+	<br>
+	<div class="text-center">
+		<a href="{% url 'store' %}" class="btn btn-primary">Continue Shopping</a>
+	</div>
 {% else %}
 <div class="row">
 	<aside class="col-lg-9">
@@ -28,6 +28,7 @@
 </tr>
 </thead>
 <tbody>
+
 {% for cart_item in cart_items %}
 <tr>
 	<td>
@@ -38,7 +39,7 @@
 				<p class="text-muted small">
 					{% if cart_item.variations.all %}
 						{% for item in cart_item.variations.all %}
-							{{ item.variation_category | capfirst }} : {{ item.variation_value | capfirst }}
+							{{ item.variation_category | capfirst }} : {{ item.variation_value | capfirst }} <br>
 						{% endfor %}
 					{% endif %}
 				</p>
@@ -50,19 +51,17 @@
 					<div class="col">
 						<div class="input-group input-spinner">
 							<div class="input-group-prepend">
-								<a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+							<a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
 							</div>
 							<input type="text" class="form-control"  value="{{ cart_item.quantity }}">
 							<div class="input-group-append">
-								<form class="" action="{% url 'add_cart' cart_item.product_id %}" method="post">
+								<form action="{% url 'add_cart' cart_item.product.id %}" method="POST">
 									{% csrf_token %}
 									{% for item in cart_item.variations.all %}
-										<input type="hidden" name="{{item.variation_category | lower}}" value="{{item.variation_value | capfirst}}">
+										<input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst }}">
 									{% endfor %}
-								 <button class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i> </button>
-
+									<button class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i> </button>
 								</form>
-
 							</div>
 						</div> <!-- input-group.// -->
 					</div> <!-- col.// -->
@@ -79,7 +78,6 @@
 </tr>
 {% endfor %}
 
-
 </tbody>
 </table>
 </div> <!-- card.// -->
@@ -91,21 +89,21 @@
 		<div class="card-body">
 			<dl class="dlist-align">
 			  <dt>Total price:</dt>
-			  <dd class="text-right">$ {{ total }}</dd>
+			  <dd class="text-right">$ {{total}}</dd>
 			</dl>
 			<dl class="dlist-align">
 			  <dt>Tax:</dt>
-			  <dd class="text-right"> $ {{ tax }}</dd>
+			  <dd class="text-right"> $ {{tax}}</dd>
 			</dl>
 			<dl class="dlist-align">
-			  <dt> Grand Total:</dt>
-			  <dd class="text-right text-dark b"><strong>$ {{ grand_total }}</strong></dd>
+			  <dt>Grand Total:</dt>
+			  <dd class="text-right text-dark b"><strong>$ {{grand_total}}</strong></dd>
 			</dl>
 			<hr>
 			<p class="text-center mb-3">
 				<img src="{% static './images/misc/payments.png' %}" height="26">
 			</p>
-			<a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
+			<a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Checkout </a>
 			<a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
 		</div> <!-- card-body.// -->
 		</div> <!-- card.// -->
@@ -119,8 +117,6 @@
 
 </div> <!-- container .//  -->
 </section>
-
-
-
+<!-- ========================= SECTION CONTENT END// ========================= -->
 
 {% endblock %}
